# AI-Engineering-primer

./: .gitignore  main.py  pyproject.toml
MCP/: agent1.ipynb  math_server.py  weather_server.py
agents_vs_workflows/: agent.ipynb
debugging-workflow/: debug-agent.ipynb
design-patterns/: evaluator-pattern.ipynb  orchestrator-worker.ipynb  prompt_chaining.ipynb  router-pattern.ipynb
human-in-loop/: agent.ipynb
memory-agent/: memory-agent.ipynb
parallel_execution/: agent.py
parallel_execution/articles/: bloom-filters.txt  graph-db.txt
self-evolution-google/: agent.ipynb
text-to-sql/: agent.ipynb
tool-calls/: articles.py  newsletter-db-call.ipynb
