[project]
name = "agenticengineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.12",
    "langchain-google-genai>=4.2.7",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.8",
    "mcp[cli]>=1.28.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
